    for an at command, without deleting and creating it again and then
    reapplying all the attributes.
  - feature: the "-" character is disallowed in defined names. Use dot (.) or _
    instead.  The - is used to separate ranges in the set command.

- Rudi, Sun May 27 12:51:52 MEST 2007
  - Archiving FileLogs. Added fhemweb.pl (pgm2) code, to show logs from the
    archive directory. See the attributes archivedir/archivecmd.
  - Added EM1010PC suppoort (right now only with EM1000WZ). Support added
    for displaying logs in the fhemweb.pl (webfrontends/pgm2)

- Pest, Mon May 28 19:39:22 MEST 2007
  - Added 62_EMEM.pm to support EM1000-EM devices.
  - doc: Update of commandref.htm (typos and EMEM).

- Pest, Mon May 29 00:07:00 MEST 2007
  - check-in changes of 60_EM.pm to make EMEM work.

- Mon Jun  4 08:23:43 MEST 2007
  - Small changes for EM logging

- Pest Jun 10, 23:16:23 MEST 2007
  - Set wrong values in 62_EMEM to -1

- Pest Jun 12, 21:33:00 MEST 2007
  - in 62_EMEM.pm: added energy_today and energy_total

- Pest Jun 18, 20:06:23 MEST 2007
  - in 62_EMEM.pm: Power units removed from value content added to name.

- Rudi Sun Aug  5 10:59:51 MEST 2007
  - WS300 Loglevel changed for KS300 device (from 2 to GetLogLevel or 5)
  - First version of the FritzBox port: 
    - Perl binary/ftdi_sio module 
  - EM: added setTime, reset
  - docs/fritzbox.html. Note: The fb_fhem_0.1.tar.gz won't be part of CVS
    as it contains largee binaries (swapfile, perl mipsel executable, etc).

- Rudi Mon Aug  6 20:15:00 MEST 2007
  - archiving added to the main logs.
    NOTE: The FileLog filename (INT attribute) is now also called logfile.

- Rudi Wed Aug 29 08:28:34 MEST 2007
  - archive attributes clarified in the doc

- Rudi Mon Sep  3 15:47:59 MEST 2007
  - 99_Sunrise_EL.pm checked in. Replaces 99_Sunrise.pm, and does not need
    any Date module.

- Rudi Sun Sep  9 08:43:03 MEST 2007
  - mode holiday_short added + documentation. Not tested.
    any Date module.