@@ -3,13 +3,13 @@
 # FileLog definition:
 #  define FileLog fs20log fs20dev /var/log/fs20dev-%Y-%U.log 
 #
-set terminal png
+set terminal png size 1024,240 crop
 set output '<OUT>.png'
 set xdata time
 set timefmt "%Y-%m-%d_%H:%M:%S"
 set xlabel " "
 set ytics nomirror
-set title '<IN>'
+set title '<TL>'
 set grid
 set yrange [-0.2:1.2]
 
